# cddl-codegen

./: .gitignore  404.html  Cargo.toml  GENERATING_SERIALIZATION_LIB.md  README.md  index.html  search-index.json  sitemap.xml  supported.cddl
.github/: dependabot.yml
.github/workflows/: build.yml  deploy-docs.yml
assets/css/: styles.055f7e0b.css  styles.1d864cdd.css  styles.acc5afee.css  styles.ebba4859.css
assets/js/: 17896441.357c4562.js  17896441.59a9cb4b.js  19efaed6.0096f921.js  19efaed6.52677f8c.js  1a4e3797.e4287d6f.js  1be78505.d85e3ab6.js  1be78505.fb8a0cdc.js  29104121.4b4c0c9f.js  972.69014f2b.js  (+64 more)
command_line_flags/: index.html
comment_dsl/: index.html
current_capacities/: index.html
docs/: .gitignore  README.md  docusaurus.config.js  package.json  sidebars.js
example/: README.md  serialization_unit_tests.rs  supported.cddl
examples/: index.html
getting_started/: index.html
integration-other/: index.html
output_format/: index.html
search/: index.html
src/: cli.rs  cmd.rs  comment_ast.rs  dep_graph.rs  generation.rs  intermediate.rs  lib.rs  main.rs  parsing.rs  rust_reserved.rs  test.rs  utils.rs
static/: Cargo.toml  Cargo_json_gen.toml  Cargo_rust.toml  Cargo_wasm.toml  error.rs  json-ts-types.js  ordered_hash_map.rs  ordered_hash_map_json.rs  ordered_hash_map_schemars.rs  package.json  package_json_schemas.json  prelude.rs  prelude_canonical.rs  prelude_wasm.rs  raw_bytes_encoding.rs  run-json2ts.js  serialization.rs  serialization_non_force_canonical.rs  serialization_non_preserve.rs  serialization_preserve.rs  serialization_preserve_force_canonical.rs  serialization_preserve_non_force_canonical.rs  serialize_canonical.rs  serialize_non_canonical.rs
tests/: custom_serialization  custom_serialization_preserve  deser_test  external_json_impls  external_rust_defs  external_rust_defs_compiles_with_json_preserve  external_rust_defs_multifile  external_rust_raw_bytes_def  external_wasm_defs  external_wasm_defs_multifile  external_wasm_raw_bytes_def
wasm_differences/: index.html
(+45 files in other folders)
