[package]
name = "cddl-codegen"
version = "0.1.0"
edition = "2018"
license = "MIT"
repository = "https://github.com/dcSpark/cddl-codegen"
keywords = ["cddl", "codegen", "cbor", "wasm"]
description = "Codegen serialization logic for CBOR automatically from a CDDL specification"

[features]
default = ["which-rustfmt"]
# Dynamically discover a `rustfmt` binary using the `which` crate
which-rustfmt = ["which"]

[dependencies]
cbor_event = "2.4.0"
cddl = "0.9.1"
clap = { version = "4.3.12", features = ["derive"] }
codegen = { git = "https://github.com/dcSpark/codegen", branch = "master" }
either = "1.8.1"
once_cell = "1.17.1"
nom = "7.1.1"
pathdiff = "0.2.1"
which = { version = "4.4.0", optional = true, default-features = false }
syn = "2.0.12"
quote = "1.0.26"